k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-movie
  namespace: react-movie
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-movie
  template:
    metadata:
      labels:
        app: react-movie
    spec:
      containers:
        - name: react-movie
          image: 475190216605.dkr.ecr.ap-south-1.amazonaws.com/react-movie:latest
          ports:
            - containerPort: 80
