k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-movie-service
  namespace: react-movie
spec:
  type: NodePort
  selector:
    app: react-movie
  ports:
    - port: 80
      targetPort: 80
